--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-
- <h1>   <span>{{ title }} app is running!</span> </h1>
-
-<app-enterprises></app-enterprises>
+<app-navbar></app-navbar>
+ <h1>   <span>{{ title }} </span> </h1>
 <router-outlet></router-outlet>
+<app-messages></app-messages>
