--- a/src/app/enterprises/enterprises.component.css
+++ b/src/app/enterprises/enterprises.component.css
@@ -4,7 +4,7 @@
     list-style-type: none;
     padding: 0;
     width: 15em;
-    background-color: blue;
+    
   }
   
   .enterprises li {
@@ -60,6 +60,7 @@
     line-height: 1em;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
+    align-self: center;
   }
   
   .enterprises .name {
