--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class = "bootstrap-wrapper">
+<div class = "bootstrap-wrapper" background-color: red>
   <div class = "container">
     <div class = "row mt20">
       <div class = "col-md-6 offset-md-3">
@@ -35,14 +35,14 @@
 
 
 
-<div class="container">
+<div class="container" >
   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      <img src = "../../../assets/Sequence_Open_24.svg" width = "50" height = "50" />
       <span class="fs-4">Simple header</span>
     </a>
 
-    <ul class="nav nav-pills">
+    <ul class="nav nav-pills prueba">
       <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
@@ -54,4 +54,7 @@
       <button type="button" class="btn btn-primary">Sign-up</button>
     </div>
   </header>
+</div>
+<div>
+  <h1 class= "test-style"> testing style</h1>
 </div>
