--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-sm bg-agilent" data-bs-theme="dark" >
   <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="'/'">
-      <img src="../../../assets/login.png" alt="" width="30" height="24">
+      <img src="../../../assets/login.png" alt="" width="60" height="48">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,9 +12,9 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/login'">Login</a>
+          <a class="nav-link" [routerLink]="'/login'" aligne >Login</a>
         </li>
-        <li class="nav-item me-2">
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="'/version'">Version</a>
         </li>
         <li class="nav-item">
