--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-sm bg-agilent" data-bs-theme="dark" >
+<nav class="navbar navbar-expand-sm  bg-agilent" data-bs-theme="dark" >
   <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="'/'">
-      <img src="../../../assets/login.png" alt="" width="60" height="48">
+      <img src = "../../../assets/5977B_Q_24.svg" width = "50" height = "50" />
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -17,10 +17,13 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/version'">Version</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item text-end">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
       </ul>
+      
     </div>
+
   </div>
+  
 </nav>
