--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
           <a class="nav-link" [routerLink]="'/login'" aligne >Login</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/sigup'" aligne >sigup</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="'/version'">Version</a>
         </li>
         <li class="nav-item text-end">
