cors issue solved

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" [routerLink]="'/'">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/login'" aligne >Login</a>
@@ -19,6 +19,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/version'">Version</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/main-user'">Test API</a>
         </li>
         <li class="nav-item text-end">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
