--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
           <form (ngSubmit) = "formSubmit()">
             <mat-form-field class = "full-width"  appearance = "outline">
               <mat-label>Nombre de usuario</mat-label>
-              <input [(ngModel)] = "loginData.username" name = "username" required  matInput placeholder="Digite su nombre de usuario">
+              <input [(ngModel)] = "loginData.email" name = "username" required  matInput placeholder="Digite su nombre de usuario">
               <mat-hint>El nombre de usuario debe ser valido</mat-hint>
             </mat-form-field>
             <mat-form-field class="full-width"  appearance = "outline">
