keypass and Enterprises working

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
             <img src="../../../assets/login.png" width = "100" height = "100">
           </div>
 
-          <h1 class = "text-center">Inicio de sesión</h1>
+          <h1 class = "text-center">Inicio de sesión {{ message }}</h1>
           <form (ngSubmit) = "formSubmit()">
             <mat-form-field class = "full-width"  appearance = "outline">
               <mat-label>Nombre de usuario</mat-label>
@@ -25,6 +25,8 @@
             <div class = "container text-center">
               <button type = "submit" mat-raised-button color="primary">Iniciar sesión</button>
               <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
+              <button type="button" (myClick)="enviaMensaje()" clickable>pulsar</button>
+              <button (click)="enviaMensaje()"></button>
             </div>
           </form>
         </mat-card>
