--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,8 +23,11 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/main-user'">Test API</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/enterprises'">Enterprises</a>
+        </li>
         <li class="nav-item text-end">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled {{ message }}</a>
         </li>
       </ul>
       
