--- a/src/app/pages/keypass/keypas.component.html
+++ b/src/app/pages/keypass/keypas.component.html
@@ -1,5 +1,6 @@
-<p>keypas works!</p>
-<p>selected id: {{id}}</p>
+<h1> {{enterprise.name}}</h1>
+<h2>List of Passwords</h2>
+
 <table class="table table-striped">
     <thead>
         <tr>
