--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,16 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" [routerLink]="'/'">Home</a>
+          <a class="nav-link" aria-current="page" [routerLink]="'/'">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/login'" aligne >Login</a>
+          <a class="nav-link" [routerLink]="'/login'" routerLinkActive="active-link" >Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/sigup'" aligne >sigup</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/version'">Version</a>
+          <a class="nav-link" [routerLink]="'/version'"routerLinkActive="active-link">Version</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/main-user'">Test API</a>
