--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/enterprises'">Enterprises</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/testformgroup'">TestFormgroup</a>
+        </li>
         <li class="nav-item text-end">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled {{ message }}</a>
         </li>
