--- a/src/app/pages/keypass-create/keypass-create.component.html
+++ b/src/app/pages/keypass-create/keypass-create.component.html
@@ -6,21 +6,26 @@
             <img src="../../../assets/Sequence_Open_24.svg" width = "100" height = "100">
           </div>
   
-          <h1 class="text-center">Enter company information here</h1>
+          <h1 class="text-center">Company Id {{ enterpriseId}}</h1>
   
   
           <form (ngSubmit) = "formSubmit()">
 
   
             <mat-form-field class="full-width"  appearance = "outline">
-              <mat-label>Company Name</mat-label>
-              <input required [(ngModel)] = "enterprise.name" name = "companyName" matInput placeholder="Company name:">
+              <mat-label>User Name</mat-label>
+              <input required [(ngModel)] = "keypass.username" name = "userName" matInput placeholder="user name:">
             </mat-form-field>
   
             <mat-form-field class="full-width"  appearance = "outline">
-              <mat-label>Project Leader</mat-label>
-              <input required [(ngModel)] = "enterprise.projectLeader" name = "apellido" matInput placeholder="Digite su apellido">
+              <mat-label>Password</mat-label>
+              <input  [(ngModel)] = "keypass.password" name = "password" matInput placeholder="password:">
+
             </mat-form-field>
+            <mat-form-field class="full-width"  appearance = "outline">
+                <mat-label>Notes</mat-label>
+                <input  [(ngModel)] = "keypass.notes" name = "notes" matInput placeholder="notes:">
+              </mat-form-field>
                 <div class = "container text-center">
               <button mat-raised-button color="primary">Registrar</button>
               <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
