--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="jumbotron bg-cover mb-0 text-white">
     <div class="container py-1">
-        <h1 class="display-4 font-weight-bold  text-center"><img src="../../../assets/agilent.png" alt="" width="40" height="40">My Portfolio</h1>
+        <h1 class="display-4 font-weight-bold  text-center"><img src="../../../assets/agilent.png" alt="" width="40" height="40">Agilent Keypass</h1>
         <p class="font-italic mb-1 text-center">By Gerardo Loeches and Ana Pica</p>
     </div>
 </header>
