--- a/src/app/pages/keypass-create/keypass-create.component.html
+++ b/src/app/pages/keypass-create/keypass-create.component.html
@@ -7,11 +7,10 @@
           </div>
   
           <h1 class="text-center">Company Id {{ enterpriseId}}</h1>
+          
   
-  
-          <form (ngSubmit) = "formSubmit()">
-
-  
+       <form (ngSubmit) = "formSubmit()">    
+            
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>User Name</mat-label>
               <input required [(ngModel)] = "keypass.username" name = "userName" matInput placeholder="user name:">
@@ -28,7 +27,9 @@
               </mat-form-field>
                 <div class = "container text-center">
               <button mat-raised-button color="primary">Registrar</button>
-              <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
+              <button mat-raised-button color="primary" (click)="onBack()">  Back</button>
+             
+ <!--             <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>    -->
             </div>
           </form>
           <br><br><br>
