--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,1 +1,3 @@
-<p>messages works!</p>
+<button mat-raised-button color="primary" (click)="confirmDialog()">Confirm</button>
+<br>
+Response is: {{result}}
