--- a/src/app/pages/enterprises/enterprises.component.css
+++ b/src/app/pages/enterprises/enterprises.component.css
@@ -10,7 +10,9 @@
   .enterprises li {
     display: flex;
   }
-  
+  .edit{
+    cursor: pointer;
+  }
   .enterprises button {
     flex: 1;
     cursor: pointer;
