--- a/src/app/pages/keypass/keypas.component.html
+++ b/src/app/pages/keypass/keypas.component.html
@@ -17,7 +17,9 @@
             <td>{{ keypass.password }}</td>
             <td>{{ keypass.notes }}</td>
             <td>
-                <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',keypass.id]" class="btn btn-info">Edit</a>
+ <!--               <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',keypass.id]" class="btn btn-info">Edit</a>   -->
+            <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',keypass.id]" class="patata"><i class="material-icons" data-toggle="tooltip" title="edit Company">edit </i></a>
+            <a class="delete"(click)="deleteKeypass(keypass)"><i class="material-icons" data-toggle="tooltip" title="edit Company">delete_forever </i></a>
              </td>
         </tr>
     </tbody>
