--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -25,9 +25,9 @@
             <div class = "container text-center">
               <button type = "submit" mat-raised-button color="primary">Login</button>
               <button type="reset" style = "margin-left: 20px;" mat-raised-button color="primary">Clear</button>
-              <button type="button" style = "margin-left: 20px;" mat-raised-button color="primary" (myClick)="enviaMensaje()">Register</button>
-     <!--         <button type="button" (myClick)="enviaMensaje()" clickable>pulsar</button>
-              <button (click)="enviaMensaje()"></button>  -->
+              <button type="button" style = "margin-left: 20px;" mat-raised-button color="primary" (click)="goToRegister()" clickable>Register</button>
+ <!--            <button type="button" (myClick)="enviaMensaje()" clickable>pulsar</button>
+              <button type="button" (click)="enviaMensaje()"></button>   -->
             </div>
           </form>
        
