--- a/src/app/auth/signup/sigup.component.html
+++ b/src/app/auth/signup/sigup.component.html
@@ -14,27 +14,27 @@
   
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>Nombre</mat-label>
-              <input required [(ngModel)] = "user.firstName" name = "nombre" matInput placeholder="Digite su nombre">
+              <input required [(ngModel)] = "user.firstName" name = "nombre" matInput placeholder="Enter your name">
             </mat-form-field>
   
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>Apellido</mat-label>
-              <input required [(ngModel)] = "user.lastName" name = "apellido" matInput placeholder="Digite su apellido">
+              <input required [(ngModel)] = "user.lastName" name = "apellido" matInput placeholder="Enter your first name">
             </mat-form-field>
   
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>Email</mat-label>
-              <input required [(ngModel)] = "user.email" name = "email" type="email" matInput placeholder="Digite su email">
+              <input required [(ngModel)] = "user.email" name = "email" type="email" matInput placeholder="Enter your Email">
             </mat-form-field>
 
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>Contraseña</mat-label>
-              <input required [(ngModel)] = "user.password" name = "password" type = "password" matInput placeholder="Digite su contraseña">
+              <input required [(ngModel)] = "user.password" name = "password" type = "password" matInput placeholder="Enter your password">
             </mat-form-field>
   
              <div class = "container text-center">
-              <button mat-raised-button color="primary">Registrar</button>
-              <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
+              <button mat-raised-button color="primary">Register</button>
+              <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Clear</button>
             </div>
           </form>
           <br><br><br>
