--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,11 +31,16 @@
         <li class="nav-item text-end">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled {{ message }}</a>
         </li> -->
+        
+      </ul>
+      
+    </div>
+    <div>
+      <ul class="navbar-nav">
         <li class="nav-item text-end">
           <a class="nav-link text-end" [routerLink]="'/version'"routerLinkActive="active-link">Version</a>
         </li>
       </ul>
-      
     </div>
 
   </div>
