--- a/src/app/pages/enterprises/enterprises.component.html
+++ b/src/app/pages/enterprises/enterprises.component.html
@@ -1,4 +1,9 @@
-<h2>List of Enterprises</h2>
+<div class="container">
+    <div class="row">
+        <h2 class="text-center">List of customer Companies</h2>
+    </div>
+</div>
+
 <div class="d-flex justify-content-center p-2 bd-highlight">
     <div class="p-2">
         <label for="Company Name">Company Name: </label>
@@ -31,33 +36,37 @@
       </div>
 </div>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th data-field="ID" data-width="100">ID</th>
-            <th data-field="nane" data-width="50">Company Name </th>
-            <th>Project leader</th>
-            <th>Company</th>
-            <th>Keypass</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let enterprise  of enterprises">
-            <td>{{ enterprise.id }}</td>
-            <td data-field="nane" data-width="50">{{ enterprise.name }}</td>
-            <td>{{ enterprise.projectLeader }}</td>
-            <td> 
-                <a href="#" [routerLink]="['/enterprises/',enterprise.id,'keypass']" class="patata"><i class="material-icons" data-toggle="tooltip" title="edit Company">edit </i></a>
-                <a class="edit"(click)="deleteEnterprise(enterprise)"><i class="material-icons" data-toggle="tooltip" title="edit Company">delete_forever </i></a>
-   
-            </td>
-            <td>
- <!--              <a href="#" [routerLink]="['/enterprises/',enterprise.id,'keypass']" class="btn btn-info">View</a>
-                <a href="#" [routerLink]="['/enterprise/',enterprise.id,'createKeypass']" class="btn btn-info">Add Key</a>   --> 
-                <a href="#" [routerLink]="['/enterprises/',enterprise.id,'keypass']" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="View list of keypass">visibility</i></a>
-                <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',0]" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Add keypass">add_to_photos</i></a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="container">
+    <div class="row">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th data-field="ID" data-width="100">ID</th>
+                    <th data-field="nane" data-width="50">Company Name </th>
+                    <th>Project leader</th>
+                    <th>Company</th>
+                    <th>Keypass</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let enterprise  of enterprises">
+                    <td>{{ enterprise.id }}</td>
+                    <td data-field="nane" data-width="50">{{ enterprise.name }}</td>
+                    <td>{{ enterprise.projectLeader }}</td>
+                    <td> 
+                <!--     <a href="#" [routerLink]="['/enterprises/',enterprise.id]" class="edit"><i class="material-icons" data-toggle="tooltip" title="edit Company">edit </i></a>  --> 
+                        <a class="edit"(click)="deleteEnterprise(enterprise)"><i class="material-icons" data-toggle="tooltip" title="edit Company">delete_forever </i></a>
+        
+                    </td>
+                    <td>
+        <!--              <a href="#" [routerLink]="['/enterprises/',enterprise.id,'keypass']" class="btn btn-info">View</a>
+                        <a href="#" [routerLink]="['/enterprise/',enterprise.id,'createKeypass']" class="btn btn-info">Add Key</a>   --> 
+                        <a href="#" [routerLink]="['/enterprises/',enterprise.id,'keypass']" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="View list of keypass">visibility</i></a>
+                        <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',0]" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Add keypass">add_to_photos</i></a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
+</div>
