--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-12 mt-1 text-center">
          <h4>Create a new account  : 
-            <button type="button" class="btn btn-primary">Sign up</button>
+            <button type="button" class="btn btn-primary"(click)="sendToSignup()">Sign up</button>
         </h4>
       </div>
     </div>
