--- a/src/app/pages/keypass/keypas.component.html
+++ b/src/app/pages/keypass/keypas.component.html
@@ -1,26 +1,32 @@
-<h1> {{enterprise.name}}</h1>
-<h2>List of Passwords</h2>
+<h1 class="text-center"> {{enterprise.name}}</h1>
+<h2 class="text-center">List of Passwords</h2>
+<div class="container">
+    <div class="row">
+        <div class="col">
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>user</th>
-            <th>password</th>
-            <th>notes</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let keypass  of keypasses">
-            <td>{{ keypass.id }}</td>
-            <td>{{ keypass.username }}</td>
-            <td>{{ keypass.password }}</td>
-            <td>{{ keypass.notes }}</td>
-            <td>
- <!--               <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',keypass.id]" class="btn btn-info">Edit</a>   -->
-            <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',keypass.id]" class="patata"><i class="material-icons" data-toggle="tooltip" title="edit Company">edit </i></a>
-            <a class="delete"(click)="deleteKeypass(keypass)"><i class="material-icons" data-toggle="tooltip" title="edit Company">delete_forever </i></a>
-             </td>
-        </tr>
-    </tbody>
-</table>
+            <table class="table table-striped ms-2">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>user</th>
+                        <th>password</th>
+                        <th>notes</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let keypass  of keypasses">
+                        <td>{{ keypass.id }}</td>
+                        <td>{{ keypass.username }}</td>
+                        <td>{{ keypass.password }}</td>
+                        <td>{{ keypass.notes }}</td>
+                        <td>
+            <!--               <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',keypass.id]" class="btn btn-info">Edit</a>   -->
+                        <a href="#" [routerLink]="['/enterprises/',enterprise.id,'createkeypass',keypass.id]" class="patata"><i class="material-icons" data-toggle="tooltip" title="edit Company">edit </i></a>
+                        <a class="delete"(click)="deleteKeypass(keypass)"><i class="material-icons" data-toggle="tooltip" title="edit Company">delete_forever </i></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
