--- a/src/app/version/version.component.html
+++ b/src/app/version/version.component.html
@@ -1,1 +1,19 @@
-<p> backend version: {{version.versionDate}} : {{version.versionContent}}</p>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <p> backend version: {{version.versionDate}} : {{version.versionContent}}</p>
+        </div>
+
+        <div class="col-4">
+            <p> Frontend version: 24-Oct-2023 : 01.03</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <a class="link-primary" [routerLink]="'/'">back to Home</a>
+        </div>
+        
+    </div>
+
+</div>
+
