--- a/src/app/auth/signup/sigup.component.html
+++ b/src/app/auth/signup/sigup.component.html
@@ -29,7 +29,11 @@
 
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>Contraseña</mat-label>
-              <input required [(ngModel)] = "user.password" name = "password" type = "password" matInput placeholder="Enter your password">
+       <!--       <input required [(ngModel)] = "user.password" name = "password" type = "password" matInput placeholder="Enter your password">  -->
+              <input  required [(ngModel)] = "user.password" matInput [type]="showPassword ? 'text' : 'password'" name="password" placeholder="Enter your password">
+              <mat-icon matSuffix (click)="togglePasswordVisibility()" name = "password">
+                {{showPassword?'visibility_off':'visibility'}}
+            </mat-icon>
             </mat-form-field>
   
              <div class = "container text-center">
