--- a/src/app/pages/enterprise-create/enterprise-create.component.html
+++ b/src/app/pages/enterprise-create/enterprise-create.component.html
@@ -19,7 +19,7 @@
   
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>Project Leader</mat-label>
-              <input required [(ngModel)] = "enterprise.projectLeader" name = "apellido" matInput placeholder="Digite su apellido">
+              <input required [(ngModel)] = "enterprise.projectLeader" name = "apellido" matInput placeholder="Project Leader">
             </mat-form-field>
                 <div class = "container text-center">
               <button mat-raised-button color="primary">Registrar</button>
