implemented download file

--- a/src/app/pages/enterprises/enterprises.component.html
+++ b/src/app/pages/enterprises/enterprises.component.html
@@ -52,8 +52,12 @@
                 <tr *ngFor="let enterprise  of enterprises">
                     
           <!--          <td data-field="nane" data-width="50">{{ enterprise.name }}</td>   -->
-                    <td>
+          <!--          <td>
                         <a class="edit"(click)="downloadFile(enterprise.id)">{{ enterprise.name }}</a>
+                    </td>
+            -->
+                    <td>
+                        <a href="#" [routerLink]="['/enterprises/',enterprise.id]" class="edit">{{ enterprise.name }}</a>
                     </td>
                     <td>{{ enterprise.projectLeader }}</td>
                     <td> 
