--- a/src/app/pages/enterprise-create/enterprise-create.component.html
+++ b/src/app/pages/enterprise-create/enterprise-create.component.html
@@ -25,6 +25,10 @@
               <mat-label>Other information</mat-label>
               <input [(ngModel)] = "enterprise.other_information" name = "otherinformation" matInput placeholder="Other Information">
             </mat-form-field>
+            <mat-form-field class="full-width"  appearance = "outline">
+              <mat-label>filePath</mat-label>
+              <input [(ngModel)] = "enterprise.filePath" name = "filepath" matInput placeholder="filePath" disabled>
+            </mat-form-field>
                 <div class = "container text-center">
               <button mat-raised-button color="primary">Registrar</button>
               <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
