--- a/src/app/pages/enterprise-create/enterprise-create.component.html
+++ b/src/app/pages/enterprise-create/enterprise-create.component.html
@@ -8,9 +8,12 @@
   
           <h1 class="text-center">Enter company information here</h1>
   
-  
-          <form (ngSubmit) = "formSubmit()">
+          
+          <form>
+            <input type="file" class="file-input"
+                  (change)="onFileSelected($event)" #fileUpload>
 
+            
   
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>Company Name</mat-label>
@@ -26,12 +29,21 @@
               <input [(ngModel)] = "enterprise.other_information" name = "otherinformation" matInput placeholder="Other Information">
             </mat-form-field>
             <mat-form-field class="full-width"  appearance = "outline">
-              <mat-label>filePath</mat-label>
-              <input [(ngModel)] = "enterprise.filePath" name = "filepath" matInput placeholder="filePath" disabled>
+              <mat-label>file path</mat-label>
+              <input [(ngModel)] = "enterprise.filePath" name = "filePath" matInput placeholder="file Path" readonly>
             </mat-form-field>
-                <div class = "container text-center">
-              <button mat-raised-button color="primary">Registrar</button>
-              <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>
+            <div class="file-upload">
+
+              {{fileName || enterprise.filePath}}
+
+              
+            </div>
+            <div class = "container text-center">
+              <button mat-raised-button color="primary" style = "margin-left: 20px;" (click)="formSubmit()">Registrar</button>
+              <button mat-raised-button color="primary" style = "margin-left: 20px;" class="upload-btn"
+                  (click)="fileUpload.click()">
+                    <mat-icon>attach_file</mat-icon>
+                </button>
             </div>
           </form>
           <br><br><br>
