--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,6 +7,7 @@
             <h3 class="text-center">
                 Created by Gerardo Loeches & Ana Pica
             </h3>
+            <h2 class="text-center"> New version 2.0 29/Nov/2023</h2>
         </div>
     </div>
     <div class="row">
