--- a/src/app/pages/keypass-create/keypass-create.component.html
+++ b/src/app/pages/keypass-create/keypass-create.component.html
@@ -6,8 +6,8 @@
             <img src="../../../assets/Sequence_Open_24.svg" width = "100" height = "100">
           </div>
   
-          <h1 class="text-center">Company  {{ enterpriseId}}</h1>
-          
+          <h1 class="text-center">{{ enterpriseNameString}}</h1>
+          <p></p>
   
        <form (ngSubmit) = "formSubmit()">    
             
@@ -35,14 +35,14 @@
               </select>
 
             </mat-form-field>
-            <p>Selected: {{ keypass.usertype }}</p>
+<!--            <p>Selected: {{ keypass.usertype }}</p>       -->
             <mat-form-field class="full-width"  appearance = "outline">
                 <mat-label>Notes</mat-label>
                 <input  [(ngModel)] = "keypass.notes" name = "notes" matInput placeholder="notes:">
               </mat-form-field>
                 <div class = "container text-center">
-              <button mat-raised-button color="primary">Registrar</button>
-              <button mat-raised-button color="primary" (click)="onBack()">  Back</button>
+              <button mat-raised-button color="primary" style = "margin-left: 20px;">Registrar</button>
+              <button mat-raised-button color="primary" style = "margin-left: 20px;" (click)="onBack()">  Back</button>
              
  <!--             <button type="reset" style = "margin-left: 20px;" mat-raised-button color="accent">Limpiar</button>    -->
             </div>
