Download functions and change filepath

--- a/src/app/pages/enterprise-create/enterprise-create.component.html
+++ b/src/app/pages/enterprise-create/enterprise-create.component.html
@@ -40,10 +40,12 @@
               
             </div>
             <div class = "container text-center">
-              <button mat-raised-button color="primary" style = "margin-left: 20px;" (click)="formSubmit()">Registrar</button>
+              <button mat-raised-button color="primary" style = "margin-left: 20px;" (click)="formSubmit()">
+                Save
+              </button>
               <button mat-raised-button color="primary" style = "margin-left: 20px;" class="upload-btn"
                   (click)="fileUpload.click()">
-                    <mat-icon>attach_file</mat-icon>
+                    Attach
                 </button>
             </div>
           </form>
