--- a/src/app/version/version.component.html
+++ b/src/app/version/version.component.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="col-4">
-            <p> Frontend version: 29-Nov-2023 : 02.00</p>
+            <p> Frontend version: 12-Dic-2023 : 02.01</p>
         </div>
     </div>
     <div class="row">
