--- a/src/app/version/version.component.html
+++ b/src/app/version/version.component.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="col-4">
-            <p> Frontend version: 12-Dic-2023 : 02.01</p>
+            <p> Frontend version: 18-Apr-2024 : 02.02</p>
         </div>
     </div>
     <div class="row">
