--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,9 +5,9 @@
                 Lab informatics users and passwords repository
             </h1>
             <h3 class="text-center">
-                Created by Gerardo Loeches & Ana Pica
+                Created by Gerardo Loeches & Ana Pica & Olga Fuentes
             </h3>
-            <h2 class="text-center"> New version 2.0 29/Nov/2023</h2>
+            <h2 class="text-center"> New version 2.4 build 18/Apr/2024</h2>
         </div>
     </div>
     <div class="row">
