--- a/src/app/pages/enterprises/enterprises.component.html
+++ b/src/app/pages/enterprises/enterprises.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <h2 class="text-center">List of customer Companies</h2>
+        <h2 class="text-center">List of customer Companies {{message}} Layout</h2>
     </div>
 </div>
 
