--- a/src/app/pages/keypass/keypas.component.html
+++ b/src/app/pages/keypass/keypas.component.html
@@ -1,5 +1,5 @@
 <h1 class="text-center"> {{enterprise.name}}</h1>
-<h2 class="text-center">List of Passwords</h2>
+<h2 class="text-center">List of Passwords Layout {{_role}}</h2>
 <div class="container-sm">
     <div class="row">
         
