--- a/src/app/pages/enterprise-create/enterprise-create.component.html
+++ b/src/app/pages/enterprise-create/enterprise-create.component.html
@@ -6,7 +6,7 @@
             <img src="../../../assets/Sequence_Open_24.svg" width = "100" height = "100">
           </div>
   
-          <h1 class="text-center">Enter company information here</h1>
+          <h1 class="text-center">Enter company information here {{role}} Mode</h1>
   
           
           <form>
@@ -40,11 +40,11 @@
               
             </div>
             <div class = "container text-center">
-              <button mat-raised-button color="primary" style = "margin-left: 20px;" (click)="formSubmit()">
+              <button  [disabled]="role!=='ADMIN'" mat-raised-button color="primary" style = "margin-left: 20px;" (click)="formSubmit()">
                 Save
               </button>
-              <button mat-raised-button color="primary" style = "margin-left: 20px;" class="upload-btn"
-                  (click)="fileUpload.click()">
+              <button [disabled]="role!=='ADMIN'" mat-raised-button color="primary" style = "margin-left: 20px;" class="upload-btn"
+                  (click)="fileUpload.click()" >
                     Attach
                 </button>
             </div>
