small bugs solved about the role

--- a/src/app/auth/reset/reset.component.html
+++ b/src/app/auth/reset/reset.component.html
@@ -14,7 +14,7 @@
   
             <mat-form-field class="full-width"  appearance = "outline">
               <mat-label>Email</mat-label>
-              <input required [(ngModel)] = "user.email" name = "email" type="email" matInput placeholder="Enter your Email">
+              <input required [(ngModel)] = "user.email" name = "email" type="email" matInput placeholder="Enter your Email" readonly="">
             </mat-form-field>
 
             <mat-form-field class="full-width"  appearance = "outline">
