--- a/src/app/pages/enterprise-create/enterprise-create.component.html
+++ b/src/app/pages/enterprise-create/enterprise-create.component.html
@@ -47,6 +47,7 @@
                   (click)="fileUpload.click()" >
                     Attach
                 </button>
+                <button type="button" style = "margin-left: 20px;" mat-raised-button color="primary" (click)="ToPasswords()" clickable>Passwords</button>
             </div>
           </form>
           <br><br><br>
